--- a/index.html
+++ b/index.html
@@ -5,7 +5,19 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite + React + TS</title>
+  <title>BWSR - Virtual Bubble Wrap Stress Reducer | Pop Away Your Stress</title>
+  <meta name="description"
+    content="Experience the satisfying pop of virtual bubble wrap with BWSR. A fun, interactive stress-reducer that brings the joy of bubble wrap popping to your screen." />
+  <meta name="keywords"
+    content="bubble wrap, stress relief, virtual bubble wrap, anxiety relief, interactive game, stress reducer" />
+  <meta property="og:title" content="BWSR - Virtual Bubble Wrap Stress Reducer" />
+  <meta property="og:description"
+    content="Pop away your stress with our virtual bubble wrap simulator. A satisfying, interactive experience for instant stress relief." />
+  <meta property="og:type" content="website" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="theme-color" content="#f59e0b" />
+  <link rel="canonical" href="https://bwsr.vercel.app" />
+  <meta name="robots" content="index, follow" />
 </head>
 
 <body>
